; ModuleID = '/home/carl/AnghaBench/hashcat/src/extr_status.c_status_get_speed_sec_dev.c'
source_filename = "/home/carl/AnghaBench/hashcat/src/extr_status.c_status_get_speed_sec_dev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HCBUFSIZ_TINY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @status_get_speed_sec_dev(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca double, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call double @status_get_hashes_msec_dev(i32* %7, i32 %8)
  store double %9, double* %5, align 8
  %10 = load i32, i32* @HCBUFSIZ_TINY, align 4
  %11 = call i64 @hcmalloc(i32 %10)
  %12 = inttoptr i64 %11 to i8*
  store i8* %12, i8** %6, align 8
  %13 = load double, double* %5, align 8
  %14 = fmul double %13, 1.000000e+03
  %15 = load i8*, i8** %6, align 8
  %16 = load i32, i32* @HCBUFSIZ_TINY, align 4
  %17 = call i32 @format_speed_display(double %14, i8* %15, i32 %16)
  %18 = load i8*, i8** %6, align 8
  ret i8* %18
}

declare dso_local double @status_get_hashes_msec_dev(i32*, i32) #1

declare dso_local i64 @hcmalloc(i32) #1

declare dso_local i32 @format_speed_display(double, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
